# gps_benchmark_settings

./: .gitignore  INSTRUCTIONS.md  README.md  classification_find_m_for_threshold.py  find_optimal_lr.py  pyproject.toml  regression_find_m_for_threshold.py  requirements.txt  run_pipeline.py
configs/: datasets.yaml  grids.yaml
optimal_settings/: concrete_seed0_greedy.yaml  concrete_seed0_train.yaml  diabetes_seed0_train.yaml
results/concrete/: summary_seed0_train.yaml
