[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gps-benchmark-settings"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gpflow",
    "tensorflow-probability==0.20",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "datasets",
]

[project.optional-dependencies]
# Apple Silicon / macOS — use tensorflow-macos instead of tensorflow
macos = ["tensorflow-macos==2.12"]
linux = ["tensorflow==2.12"]

[tool.setuptools.packages.find]
where = ["."]
